# hand_controlLerobot

./: .gitignore  README.md  camera_setup.py  environment.yml  gripper_rt_absolute.py  main.py  pick_and_place.py  poke_motor.py  pyproject.toml  requirements.txt  test_gripper_only.py  test_object_detection.py
assets/: finger_tip_cubes.stl
hand_teleop/cameras/: camera_manager.py
hand_teleop/detection/: object_detector.py
hand_teleop/gripper_pose/: gripper_pose.py  gripper_pose_computer.py  gripper_pose_visualizer.py
hand_teleop/hand_pose/: factory.py
hand_teleop/hand_pose/estimators/: apriltag.py  base.py  mediapipe.py  wilor.py
hand_teleop/kinematics/: benchmark_kinematics.py  kinematics.py  kinematics_old.py  robot_visualisation.py
hand_teleop/tracking/: tracker.py
scripts/: bridge_handteleop_to_so101.py  discover_and_nudge.py  gripper_direct_jog.py  hand_teleop_local.py  probe_so101_api.py  run_object_detection.py  run_teleoperation.py  scan_bus.py  setup_astra.py  start_astra_camera.py  start_astra_camera_new.py
src/hand_control/: __init__.py
src/hand_control/cameras/: __init__.py  camera_manager.py
src/hand_control/core/: __init__.py  dual_mode_system.py
src/hand_control/detection/: __init__.py  object_detector.py
tests/: __init__.py  conftest.py  test_cameras.py  test_error_handling.py  test_integration.py  test_object_detection.py
