[tool.poetry]
name = "hand-teleop"
version = "0.1.0"
description = "Self-contained hand tracking system for robot teleoperation."
authors = ["Joe Clinton <joeclinton1@btinternet.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.23.0"
pydantic = "^1.10.0"
pynput = "^1.7"
opencv-python = "*"

# Optional extras
mediapipe = { version = "*", optional = true }
wilor-mini = { git = "https://github.com/Joeclinton1/WiLoR-mini", optional = true }

[tool.poetry.extras]
wilor = ["wilor-mini", "ultralytics"]
mediapipe = ["mediapipe"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[tool.ruff]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
exclude = ["__pycache__", ".venv", "build", "dist"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"