[tool.poetry]
name = "hand-control"
version = "0.1.0"
description = "System for robotic hand teleoperation and object detection"
authors = ["Joe Clinton <joeclinton1@btinternet.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "hand_control", from = "src" }
]

[tool.poetry.scripts]
dual-mode = "hand_control.core.dual_mode_system:main"
object-detection = "scripts.run_object_detection:main"
teleoperation = "scripts.run_teleoperation:main"

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.23.0"
pydantic = "^1.10.0"
pynput = "^1.7"
opencv-python = "*"
psutil = "^5.9.0"
ultralytics = "*"  # for YOLOv8

# Optional extras
mediapipe = { version = "*", optional = true }
wilor-mini = { git = "https://github.com/Joeclinton1/WiLoR-mini", optional = true }

[tool.poetry.extras]
wilor = ["wilor-mini"]
mediapipe = ["mediapipe"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[tool.ruff]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
exclude = ["__pycache__", ".venv", "build", "dist"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"